comments and trying to fix overlap / no dice

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -189,7 +189,7 @@ input[type=submit]:hover {
   background-color: rgb(95,186,105);                              /* Picking a darker shade of green for hover */
 }
   
-/* Style the container/contact section */
+/* Style the container/contact section */     
 .Section-1 {
   margin: 0 auto;
   text-align: left;
@@ -200,12 +200,14 @@ input[type=submit]:hover {
   top: 10px;
   max-width: 800px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  overflow: overlay;
 }  
 
-/* Just used to stop footer going over contact form */
+/* Just used to stop footer going over contact form */          
 .contact-info {
-  height: 100px;
+  height: 100px;                      /* Some overlap happening with this and footer based on the textbox sixe */
   background-color: #333;
+  overflow: hidden;
 }
   
   /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
